# 29er

./: .gitignore  .gitmodules  29er-Info.plist  Cargo.toml  Package.swift
.github/workflows/: uniffi-bindings-drift.yml
.planning/sketches/: MANIFEST.md
.planning/sketches/001-command-first-triad/: README.md  index.html
.planning/sketches/002-river-chat-workbench/: README.md  index.html
.planning/sketches/003-tree-map-focus/: README.md  index.html
.planning/sketches/004-moderation-control-room/: README.md  index.html
.planning/sketches/005-relay-aware-flow/: README.md  index.html
.planning/sketches/006-channel-list-palette/: README.md  index.html
.planning/sketches/themes/: default.css
29er.xcodeproj/: project.pbxproj
29er.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
29er.xcodeproj/xcshareddata/xcschemes/: 29er.xcscheme
Sources/App/: 29erApp.swift
Sources/Models/: KernelModel.swift
Sources/Services/: RelayService.swift
Sources/Views/: ContentView.swift
android/uniffi/uniffi/nmp_app_29er/: nmp_app_29er.kt
cli/: Cargo.toml
cli/src/: main.rs
crates/29er-tui/: Cargo.toml  README.md
crates/29er-tui/src/: actions.rs  app.rs  lib.rs  main.rs  terminal.rs  tests.rs
crates/29er-tui/src/components/: mod.rs
crates/29er-tui/src/components/nostr_chat/: mod.rs  nostr_group_chat_wire.rs  nostr_group_composer.rs  nostr_group_message_row.rs  nostr_group_roster_list.rs
crates/29er-tui/src/components/nostr_content/: content_render_data.rs  mod.rs  nostr_content_view.rs  nostr_content_widget.rs
crates/29er-tui/src/components/nostr_content/content_kind_registry/: nostr_kind_registry.rs
crates/29er-tui/src/components/nostr_user/: mod.rs  nostr_avatar.rs
crates/29er-tui/src/ui/: chat.rs  composer.rs  help.rs  login.rs  membership.rs  mod.rs  palette.rs  room_list.rs  smoke.rs  status_bar.rs
crates/nmp-app-29er/: Cargo.toml
crates/nmp-app-29er/schema/: group_chat.fbs  group_tree.fbs  relay_selector.fbs
crates/nmp-app-29er/src/: app.rs  capability.rs  compose.rs  composition.rs  config.rs  content.rs  dispatch.rs  ffi.rs  group_chat.rs  group_presence.rs  group_preview.rs  group_sessions.rs  group_tree.rs  group_viewport.rs  kinds.rs  lib.rs  media_upload.rs  reactions.rs  refs.rs  relay_seeding.rs  relay_selector.rs
crates/nmp-app-29er/src/group_chat/: tests.rs
crates/shakeout/: Cargo.toml
crates/shakeout/src/: main.rs
docs/wiki/: _index.md
docs/wiki/_citations/019f02cc-8e3e-7782-9ff3-73e2a3824267/: 019f0-2ec56.json  019f0-42e6f.json  019f0-4dd62.json  019f0-5c46a.json  019f0-5e777.json  019f0-6a50b.json  019f0-c08cd.json  019f0-c82fa.json  019f0-ee8d1.json  019f0-f0bd0.json  019f0-f2921.json
docs/wiki/_citations/019f03c8-721e-7783-87f1-b3dbc19bfcef/: 019f0-e996c.json
docs/wiki/_citations/019f0d0b-8033-7cf0-a750-21b389b8daf0/: 019f0-597b2.json  019f0-8ccdc.json  019f0-e552d.json  019f0-eaacd.json
docs/wiki/_citations/2d0bcf1a-c9a6-4929-99bd-7956ebfabf16/: 2d0bc-352a8.json
docs/wiki/episodes/: 2026-06-26-1-migrate-to-nmp-v0-8-remove.md  2026-06-26-1-ratatui-0-29-0-30-upgrade.md  2026-06-26-2-enforce-nmp-doctrine-eliminate-protocol-logic.md  2026-06-26-2-mentions-feature-end-to-end-completion.md  2026-06-26-3-outbox-reliability-via-id-timestamp-pubkey.md  2026-06-26-4-observer-lifecycle-and-relay-status-via.md  2026-06-27-1-chat-ui-implementation-adopt-nmp-content.md  2026-06-27-1-upgrade-to-nmp-v0-8-4.md
docs/wiki/episodes/transcripts/: 2026-06-26-1-migrate-to-nmp-v0-8-remove.json  2026-06-26-3-outbox-reliability-via-id-timestamp-pubkey.json  2026-06-27-1-chat-ui-implementation-adopt-nmp-content.json  2026-06-27-1-upgrade-to-nmp-v0-8-4.json
docs/wiki/guides/: claude-directory-gitignore.md  group-management.md  mention-selection.md  message-confirmation.md  nip29-group-directory-door-proposal.md  relay-selection.md  snapshot-system.md  user-settings.md
docs/wiki/nouns/: 29er-tui-crate-tui-29er-package.md  29er-tui-tui-architecture.md  29er-tui.md  29er.md  boundedmessagemap.md  catppuccin-mocha.md  chat-renderer.md  claude.md  codex-exec.md  compose-chat-message-nmp-app-29er-compose-chat-message.md  compose-chat-message.md  content-string-formatting-with-mentions.md  content-string-responsibility.md  contenttreewire.md  discoveredgroup.md  discoveredgroupssnapshot.md  focus-stack.md  groupchatmessage.md  groupchatsnapshot.md  groupid.md  groupmember.md  groupmemberssnapshot.md  grouptreeprojection.md  hotlist.md  joinedgroupsprojection.md  kernelevent.md  kerneleventobserver.md  kind-9.md  kind-chat-message-kind-9.md  mention-content-format-nip-21.md  nip-21-mention-format.md  nip-21.md  nip-29.md  nmp-app-29er.md  nmp-content-tokenize-text.md  nmp-content.md  nmp-core.md  nmp-defaults.md  nmp-doctrine.md  nmp-ffi.md  (+38 more)
docs/wiki/research/: 2026-06-26-1-audit-of-29er-ios-swift-against.md  2026-06-26-1-codex-exec-code-review-gate-verdict.md  2026-06-26-1-doctrine-audit-of-29er-ios-swift.md  2026-06-26-1-nmp-v0-8-0-migration-verification.md  2026-06-26-1-opus-code-review-of-scaffolding-pr.md  2026-06-26-1-swift-codebase-audit-for-nmp-doctrine.md  2026-06-26-2-implementation-code-review-verdict-opus-approves.md  2026-06-26-2-nmp-doctrine-compliance-audit-five-architectural.md  2026-06-26-2-opus-review-of-8-issue-epic.md  2026-06-26-3-codex-exec-evaluation-of-ux-ui.md  2026-06-27-1-audit-of-all-git-stashes-and.md  2026-06-27-1-audit-of-git-stashes-and-worktrees.md  seeds.jsonl
ios/29er/: project.yml
ios/29er/29er/: 29er.entitlements  App.swift  Info.plist
ios/29er/29er.xcodeproj/: project.pbxproj
ios/29er/29er/Bridge/: 29er-Bridging-Header.h  GroupDiscoveryBridge.swift  GroupTree.swift  KernelBridge.swift  KernelModel+Apply.swift  KernelModel+Lifecycle.swift  KernelModel+Profiles.swift  KernelModel.swift  KernelSnapshotTypes.swift  KernelUpdateFrameDecoder.swift  KernelUpdateTypes.swift  NmpCore.h  ProfileRefStore.swift  (+2 more)
ios/29er/29erUITests/: M002RelayFlowUITests.swift
ios/29er/probe/: Info.plist  main.swift
scripts/: build-nmp-xcframework.sh  check-uniffi-bindings-drift.sh  run-m002-ui-uat.sh
(+24 files in other folders)
