[workspace]
resolver = "2"
members = ["crates/shakeout", "crates/nmp-app-29er", "crates/29er-tui"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/pablof7z/29er"
version = "0.1.0"

# NMP is consumed as an external git dependency — never vendored.
# Pinned to NMP master rev 3fe772189 — UniFFI is NMP's sole native FFI
# surface (the C-ABI `nmp-ffi` crate was deleted; see ADR-0030 and
# docs/builder-guide/15-codegen-and-ffi.md "App-owned UniFFI facades
# (#2494)"). 29er owns its own `TwentyNinerApp` UniFFI facade
# (`crates/nmp-app-29er`) layered over `nmp-native-runtime` +
# `nmp-uniffi-support` instead of linking the deleted C-ABI crate.
# `nmp-defaults` / `register_defaults_with_handles` are also gone (ADR-0069
# kills hidden default bundles in favor of explicit composition); 29er's
# composition root (`nmp_app_29er::composition::compose_29er_runtime`) calls
# `nmp_substrate::install` + `nmp_nip29::register` directly.
[workspace.dependencies]
nmp-core = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-native-runtime = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-uniffi-support = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-substrate = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-nip25 = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-nip29 = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-nostr-id = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-planner = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-signer-iface = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-content = { git = "https://github.com/pablof7z/nostr-multi-platform.git", rev = "3fe772189c3576c222c763360cc779205ab6593a" }
nmp-app-29er = { path = "crates/nmp-app-29er" }
uniffi = { version = "0.29" }
flatbuffers = "25.12.19"
nostr = "0.44"
serde = "1.0"
serde_json = "1.0"
zeroize = "1"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
