[package]
name = "niner_cli"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nostr = { version = "0.29", features = ["std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
