[package]
name = "tui-29er"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui terminal client for 29er — a native Rust NMP shell over nmp-app-29er."

[lib]
name = "twentyniner_tui"
path = "src/lib.rs"

[[bin]]
name = "29er-tui"
path = "src/main.rs"

[dependencies]
nmp-app-29er = { workspace = true }
nmp-nip29 = { workspace = true }
nmp-content = { workspace = true }
nmp-core = { workspace = true }
nmp-native-runtime = { workspace = true }
nmp-uniffi-support = { workspace = true }
nmp-planner = { workspace = true }
nmp-reactions = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
ratatui = "0.30"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-textarea = "0.9"
tui-widget-list = "0.15"
tui-tree-widget = "0.24"
tui-popup = "0.7"
tui-scrollview = "0.6"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
