[package]
name = "nmp-app-29er"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-app 29er glue. Calls nmp_defaults::register_defaults + nmp_nip29::register_actions, and surfaces the NIP-29 group-discovery / group-chat / discover / join C-ABI entry points the 29er iOS shell links against. Mirrors nmp-app-chirp's minimal surface; 29er carries no DM / Marmot / Wallet / Search / Embed projections in S01."

[lib]
name = "nmp_app_29er"
# Static lib so the iOS shell links one aggregate Rust archive (`-lnmp_app_29er`)
# that contains nmp-core, nmp-ffi, and this crate's `#[no_mangle]` symbols.
# Doctrine D0 forbids nmp-core -> nmp-nip29, so the per-app crate composes them.
crate-type = ["staticlib", "rlib"]

[features]
default = ["lmdb-backend"]
# Persistent local cache / publish-intent ledger (matches Chirp's default).
lmdb-backend = ["nmp-core/lmdb-backend"]

[dependencies]
flatbuffers = { workspace = true }
nmp-core = { workspace = true }
nmp-ffi = { workspace = true, features = ["signer-broker"] }
nmp-defaults = { workspace = true }
nmp-nip29 = { workspace = true }
nmp-planner = { workspace = true }
nmp-signer-iface = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
