[package]
name = "nmp-app-29er"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-app 29er glue. Composition root (nmp_substrate::install + nmp_nip29::register) plus the TwentyNinerApp UniFFI object the 29er iOS shell consumes. nmp-ffi is deleted; this crate owns its own nmp-native-runtime app and exposes 29er's lifecycle through UniFFI (#2494), not a hand-written C-ABI."

[lib]
name = "nmp_app_29er"
# lib (rlib)  — native Rust consumers (the TUI) reuse the pure modules + the
#   `compose_29er_runtime` composition root, and `cargo test` needs it.
# cdylib      — `uniffi-bindgen generate --library` reads it to emit Swift.
# staticlib   — the iOS shell links one aggregate Rust archive
#   (`-lnmp_app_29er`) that contains nmp-core, nmp-native-runtime, and this
#   crate's UniFFI scaffolding.
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["lmdb-backend"]
# Persistent local cache / publish-intent ledger (matches Chirp's default).
lmdb-backend = ["nmp-core/lmdb-backend"]
# Build the `uniffi-bindgen` binary to (re)generate Swift bindings. Not in
# `default` — keeps cold builds out of the 600s watchdog budget.
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["bindgen"]

[dependencies]
flatbuffers = { workspace = true }
nmp-content = { workspace = true }
nmp-core = { workspace = true }
nmp-native-runtime = { workspace = true }
nmp-uniffi-support = { workspace = true }
nmp-substrate = { workspace = true }
nmp-blossom = { workspace = true }
nmp-nip25 = { workspace = true }
nmp-nip29 = { workspace = true }
nmp-planner = { workspace = true }
nmp-signer-iface = { workspace = true }
nmp-nostr-id = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uniffi = { workspace = true }
uuid = { workspace = true }
# `SignerSource::LocalNsec` carries the nsec as `Zeroizing<String>`.
zeroize = { workspace = true }
