[package]
name = "shakeout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "S01 integration check: connects to a NIP-29 relay, decodes discovered groups, and logs them."

[[bin]]
name = "shakeout"
path = "src/main.rs"

[dependencies]
nmp-core = { workspace = true }
nmp-native-runtime = { workspace = true }
nmp-uniffi-support = { workspace = true }
nmp-app-29er = { workspace = true }
nmp-nip29 = { workspace = true }
zeroize = { workspace = true }
